service/discord-integrator/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-integrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-integrator
  template:
    metadata:
      labels:
        app: discord-integrator
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      containers:
        - name: discord-integrator
          image: IMAGE
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 100m
              memory: 1Gi
