service/discord-integrator/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-integrator
  labels:
    app: discord-integrator
spec:
  ports:
    - port: 3000
      name: rest
  selector:
    app: discord-integrator
